clean up code to suppress ant warning messages #6